--- a/pingpong/templates/footer.html
+++ b/pingpong/templates/footer.html
@@ -9,6 +9,6 @@
 	</div>
 <script type="text/javascript">
     $(document).ready(function () {
-			$("#loginUsername").focus();
+			$("#uname").focus();
 		});
 </script>
