new about us pic

--- a/pingpong/templates/about.html
+++ b/pingpong/templates/about.html
@@ -7,9 +7,8 @@
 <div class="headline">
 	<div class="container core_privacy">
 		<div class="core_content core_radius6">
+		<img src="{{ MEDIA_URL }}pingpong/images/james-and-dave.jpg" width="400" height="267" align="right" style="margin-left: 30px;" />
 		<h1>Our story</h1>
-		<img src="{{ MEDIA_URL }}pingpong/images/david-martin.jpg" width="218" height="110" align="right" hspace="5" />
-		<img src="{{ MEDIA_URL }}pingpong/images/james-dennes.jpg" width="218" height="110" align="right" hspace="5" />
 		<p>PingPongNinja was developed and designed by <a href="http://jdenn.es/">James Dennes</a>, 
 			and Dave Martin out of Sydney Australia, who both work on <a href="http://www.campaignmonitor.com/">Campaign Monitor</a>.
 		<p>The Campaign Monitor crew take their ping pong seriously and have had an internal ping pong ranking app for some time.</p>
